--- a/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
@@ -100,7 +100,7 @@
             android:background="@drawable/bg_hv_sharp2_gray_stroke"
             android:layout_marginTop="10dp"
             style_common:layout_constraintLeft_toLeftOf="parent"
-            style_common:layout_constraintTop_toBottomOf="@+id/top"
+            style_common:layout_constraintTop_toTopOf="parent"
             style_common:layout_constraintRight_toLeftOf="@+id/iv_vehicleLicensePhoto"
             android:id="@+id/iv_vehiclePhoto"
             android:layout_width="0dp"
@@ -113,7 +113,7 @@
             android:background="@drawable/bg_hv_sharp2_gray_stroke"
             android:layout_marginTop="10dp"
             style_common:layout_constraintLeft_toRightOf="@+id/iv_vehiclePhoto"
-            style_common:layout_constraintTop_toBottomOf="@+id/top"
+           style_common:layout_constraintTop_toTopOf="parent"
             style_common:layout_constraintRight_toRightOf="parent"
             android:id="@+id/iv_vehicleLicensePhoto"
             android:layout_width="0dp"
