--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -32,13 +32,14 @@
             app:layout_constraintTop_toTopOf="parent"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             android:text="@{item_main_order_begin.productNameAndSpecification}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            tools:text="1"
+            android:includeFontPadding="false"
+            tools:text="111111"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -47,7 +48,7 @@
             android:background="@{item_main_order_begin.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:singleLine="true"
             android:textColor="@{item_main_order_begin.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_plannum"
             android:text="@{item_main_order_begin.planNumberCN}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -64,14 +65,14 @@
             android:layout_gravity="bottom"
             android:gravity="center"
             android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textColor="@color/color_grey_900"
+            android:textSize="@dimen/dimen_text_size_type"
             android:text="@{item_main_order_begin.type}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             tools:text="王尼玛"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="10dp"
             android:includeFontPadding="false"
            app:layout_constraintLeft_toRightOf="@+id/tv_type"
             app:layout_constraintTop_toBottomOf="@+id/tv_productName"
@@ -80,7 +81,7 @@
             android:singleLine="true"
             android:layout_marginLeft="8dp"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:text="@{item_main_order_begin.shortAccessComName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -98,7 +99,7 @@
             android:visibility="@{item_main_order_begin.isShowBtn(item_main_order_begin)? View.GONE:View.VISIBLE}"
             android:text="@{item_main_order_begin.planTimeCN}"
             android:textColor="@color/color_hv_txt_dark"
-            android:textSize="@dimen/dimen_recylce_item_date_txtsize"
+            android:textSize="@dimen/dimen_text_size_datetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -106,10 +107,10 @@
             android:layout_marginTop="10dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/bt_sure"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:singleLine="true"
             android:layout_marginLeft="10dp"
             android:textSize="15sp"
@@ -135,10 +136,10 @@
             android:layout_marginTop="10dp"
             app:layout_constraintRight_toLeftOf="@+id/bt_reject"
             app:layout_constraintTop_toBottomOf="@+id/tv_duimian"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:singleLine="true"
             android:layout_marginLeft="10dp"
             android:textSize="15sp"
