--- a/heavycenter/src/main/res/layout/frag_main_order_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_detail.xml
@@ -22,7 +22,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/title"
-            app:txt_mid = "@{frag_main_order_detail.orderNo}"
+            app:txt_mid = '@{frag_main_order_detail==null?"":frag_main_order_detail.orderNo}'
             app:iv_left ="@drawable/icon_hv_back"
             app:iv_right ="@drawable/icon_hv_scan"
             android:layout_width="match_parent"
@@ -61,10 +61,20 @@
 
         </RelativeLayout>
 
+            <View
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rl_topcontainer"
+                android:id="@+id/v1"
+                android:background="@color/color_block_back"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
+
+
+
         <LinearLayout
             android:clickable="true"
             android:id="@+id/ll_fuction"
-            app:layout_constraintTop_toBottomOf="@+id/rl_topcontainer"
+            app:layout_constraintTop_toBottomOf="@+id/v1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
@@ -142,7 +152,7 @@
             android:layout_marginTop="3dp"
           app:layout_constraintTop_toTopOf="@+id/item_tip"
             app:layout_constraintRight_toRightOf="parent"
-            android:padding="5dp"
+            android:padding="7dp"
             android:id="@+id/iv_local"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
