--- a/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
@@ -59,7 +59,8 @@
 
 
         <ImageView
-            app:layout_constraintTop_toBottomOf="@+id/title"
+           style_common:layout_constraintTop_toTopOf="parent"
+            style_common:layout_constraintLeft_toLeftOf="parent"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,14 +71,14 @@
             android:includeFontPadding="false"
             android:gravity="top"
             tools:text="混凝土"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/tv_productName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:text="@{frag_main_trans_detail.productNameAndSpecification}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toLeftOf="@+id/line_left"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -97,7 +98,7 @@
             android:paddingBottom="1dp"
 
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_plannum"
             app:layout_constraintRight_toRightOf="@+id/line_right"
             style_common:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="13dp"
@@ -115,13 +116,13 @@
             android:layout_marginTop="10dp"
             android:padding="1dp"
             android:singleLine="true"
-            android:textSize="13sp"
+            android:textSize="@dimen/dimen_text_size_type"
             android:visibility="@{frag_main_trans_detail==null?View.INVISIBLE:View.VISIBLE}"
             tools:text="来自"
             android:background="@{frag_main_trans_detail.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:includeFontPadding="false"
             android:text="@{frag_main_trans_detail.type}"
-            android:textColor="@color/black"
+            android:textColor="@color/color_grey_900"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_duimian"
    />
 
@@ -135,7 +136,7 @@
             android:singleLine="true"
             android:text="@{frag_main_trans_detail.accessComName}"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:layout_marginLeft="15dp"
             style_common:layout_constraintLeft_toRightOf="@+id/type"
             style_common:layout_constraintTop_toTopOf="@+id/type"
@@ -183,7 +184,7 @@
 
 
         <View
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:visibility="visible"
             android:background="@color/white"
             android:id="@+id/block"
