--- a/heavycenter/src/main/res/layout/item_main_store.xml
+++ b/heavycenter/src/main/res/layout/item_main_store.xml
@@ -24,7 +24,7 @@
         android:gravity="bottom"
         android:singleLine="true"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+        android:textSize="@dimen/dimen_text_size_productionName"
         android:text="@{item_main_store.warehouseName}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -38,7 +38,7 @@
         android:singleLine="true"
         android:layout_marginLeft="14dp"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:textSize="@dimen/dimen_text_size_unit"
         android:text="@{item_main_store.productName}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -51,7 +51,7 @@
         android:singleLine="true"
         android:layout_marginLeft="10dp"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:textSize="@dimen/dimen_text_size_unit"
         android:text="@{item_main_store.specifications}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -65,8 +65,8 @@
         android:id="@+id/tv_current"
         android:singleLine="true"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/color_recylce_item_content_txtcolor"
-        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:textColor="@color/color_grey_500"
+        android:textSize="@dimen/dimen_text_size_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -74,8 +74,9 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_housename"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/pv_progress"
-        android:layout_marginBottom="@dimen/dimen_recylce_item_margin"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </android.support.constraint.ConstraintLayout>
