--- a/heavycenter/src/main/res/layout/item_main_strans.xml
+++ b/heavycenter/src/main/res/layout/item_main_strans.xml
@@ -57,7 +57,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="20dp"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     tools:text="沪D12345"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -79,7 +79,7 @@
                    app:layout_constraintTop_toTopOf="@+id/tv_carlicenseno"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_carlicenseno"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/dimen_text_size_datetime"
                     tools:text="沪D12345"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -93,7 +93,7 @@
                     android:layout_marginTop="7dp"
                     app:layout_constraintLeft_toLeftOf="@+id/tv_carlicenseno"
                     app:layout_constraintTop_toBottomOf="@+id/v1"
-                    android:textSize="17sp"
+                    android:textSize="@dimen/dimen_text_size_datetime"
                     tools:text="2017-12-12 10:10"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -108,7 +108,7 @@
                     android:layout_marginTop="5dp"
                     app:layout_constraintLeft_toLeftOf="@+id/tv_carlicenseno"
                     app:layout_constraintTop_toBottomOf="@+id/tv_starttime"
-                    android:textSize="17sp"
+                    android:textSize="@dimen/dimen_text_size_datetime"
                     tools:text="2017-12-12 10:10"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
