--- a/heavycenter/src/main/res/layout/item_main_trans_receipt.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_receipt.xml
@@ -19,8 +19,8 @@
 
         <com.siweisoft.heavycenter.module.view.circle.CircleBar
             android:id="@+id/circlebar"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -40,7 +40,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.isFinished(item_main_trans_receipt)?item_main_trans_receipt.YKCN:item_main_trans_receipt.totalSuttleCN}"
             android:textColor="@color/color_hv_blue"
-            android:textSize="22sp"
+            android:textSize="@dimen/dimen_text_size_orderweight"
             app:layout_constraintBottom_toBottomOf="@+id/tv_carnum"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
@@ -53,7 +53,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.carNumberCN}"
             android:textColor="@color/color_hv_blue"
-            android:textSize="13sp"
+            android:textSize="@dimen/dimen_text_size_carno"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
             app:layout_constraintTop_toBottomOf="@+id/tv_totalnum"/>
@@ -68,7 +68,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.productNameAndSpecification}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toRightOf="@id/circlebar"
             app:layout_constraintRight_toLeftOf="@+id/iv_local"
             app:layout_constraintTop_toTopOf="@id/circlebar"
@@ -88,7 +88,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.develiverCompanyNameCN}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/productName"
             app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
             app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
@@ -128,7 +128,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.trueNameCN}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/tv_send_comname"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
@@ -138,7 +138,8 @@
 
 
         <TextView
-            android:textColor="@color/black"
+
+            android:textColor="@color/color_grey_900"
            app:layout_constraintRight_toLeftOf="@+id/tv_receiptnum"
             android:id="@+id/type_receipt_right"
             android:layout_width="wrap_content"
@@ -148,7 +149,7 @@
             android:padding="1dp"
             android:singleLine="true"
             android:text="发来"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_type"
             android:layout_marginRight="5dp"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"/>
@@ -183,7 +184,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.fhTimeCN}"
             android:textColor="@color/color_grey_400"
-            android:textSize="14sp"
+            android:textSize="@dimen/dimen_text_size_datetime"
             app:layout_constraintTop_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
             />
@@ -199,7 +200,7 @@
             android:singleLine="true"
             android:text='@{item_main_trans_receipt.isshowOpeBtn(item_main_trans_receipt)?"":item_main_trans_receipt.shTimeCN}'
             android:textColor="@color/color_grey_400"
-            android:textSize="14sp"
+            android:textSize="@dimen/dimen_text_size_datetime"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sendtime"
             android:layout_marginTop="7dp"
@@ -235,7 +236,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_receipt.carLicenseNoCN}"
             android:textColor="@color/color_hv_blue"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_plannum"
             android:visibility="@{item_main_trans_receipt.showCarLicense?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
@@ -243,6 +244,7 @@
 
 
         <ImageView
+            android:visibility="@{item_main_trans_receipt.isFinished(item_main_trans_receipt)?View.GONE:View.VISIBLE}"
             android:id="@+id/iv_local"
             android:layout_width="15dp"
             android:layout_height="15dp"
