--- a/heavycenter/src/main/res/layout/item_main_trans_send.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_send.xml
@@ -19,8 +19,8 @@
 
         <com.siweisoft.heavycenter.module.view.circle.CircleBar
             android:id="@+id/circlebar"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -40,7 +40,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_send.isFinished(item_main_trans_send)?item_main_trans_send.YKCN:item_main_trans_send.totalSuttleCN}"
             android:textColor="@color/color_hv_yelll"
-            android:textSize="22sp"
+            android:textSize="@dimen/dimen_text_size_orderweight"
             app:layout_constraintBottom_toBottomOf="@+id/tv_carnum"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
@@ -53,7 +53,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_send.carNumberCN}"
             android:textColor="@color/color_hv_yelll"
-            android:textSize="13sp"
+            android:textSize="@dimen/dimen_text_size_carno"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
             app:layout_constraintTop_toBottomOf="@+id/tv_totalnum"/>
@@ -68,7 +68,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_send.productNameAndSpecification}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toRightOf="@id/circlebar"
             app:layout_constraintRight_toLeftOf="@+id/iv_local"
             app:layout_constraintTop_toTopOf="@id/circlebar"
@@ -88,7 +88,7 @@
             android:text="@{item_main_trans_send.trueNameCN}"
             android:textColor="@color/white"
             android:layout_marginRight="5dp"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/productName"
             app:layout_constraintRight_toLeftOf="@+id/type_send_right"
             app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
@@ -97,7 +97,7 @@
 
 
         <TextView
-            android:textColor="@color/black"
+            android:textColor="@color/color_grey_900"
             android:id="@+id/type_send_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
             android:padding="1dp"
             android:singleLine="true"
             android:text="发往"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_type"
             android:layout_marginRight="5dp"
             app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
             app:layout_constraintRight_toLeftOf="@+id/tv_sendnum"
@@ -142,7 +142,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_send.receiveCompanyNameCN}"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/tv_send_comname"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
@@ -180,7 +180,7 @@
             android:singleLine="true"
             android:text="@{item_main_trans_send.fhTimeCN}"
             android:textColor="@color/color_grey_400"
-            android:textSize="14sp"
+            android:textSize="@dimen/dimen_text_size_datetime"
             app:layout_constraintTop_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
             />
@@ -195,7 +195,7 @@
             android:layout_marginRight="10dp"
             android:singleLine="true"
             android:textColor="@color/color_grey_400"
-            android:textSize="14sp"
+            android:textSize="@dimen/dimen_text_size_datetime"
             android:text='@{item_main_trans_send.isshowOpeBtn(item_main_trans_send)?"":item_main_trans_send.shTimeCN}'
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sendtime"
@@ -232,7 +232,7 @@
             android:singleLine="true"
             android:text='@{item_main_trans_send.carLicenseNoCN}'
             android:textColor="@color/color_hv_yelll"
-            android:textSize="12sp"
+            android:textSize="@dimen/dimen_text_size_plannum"
             android:visibility="@{item_main_trans_send.showCarLicense?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
@@ -240,6 +240,7 @@
 
 
         <ImageView
+            android:visibility="@{item_main_trans_send.isFinished(item_main_trans_send)?View.GONE:View.VISIBLE}"
             android:id="@+id/iv_local"
             android:layout_width="15dp"
             android:layout_height="15dp"
