--- a/heavycenter/src/main/res/layout/item_myce_unit_new_txt.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_txt.xml
@@ -3,9 +3,9 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:singleLine="true"
             android:gravity="center_vertical"
-            android:textColor="@color/color_grey_500"
+            android:textColor="@color/color_grey_400"
             android:id="@+id/txt"
-            android:textSize="17dp"
+            android:textSize="15sp"
             android:background="@null"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
