--- a/lib/src/main/res/layout/item_title5.xml
+++ b/lib/src/main/res/layout/item_title5.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -27,7 +29,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:gravity="center"
-       android:padding="8dp"
+       android:padding="9dp"
         android:textColor="@color/color_title_select"
         android:textSize="17sp"
         android:visibility="visible" />
@@ -47,7 +49,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:gravity="center_vertical"
-            android:padding="3dp"
+            android:padding="4dp"
             android:textColor="@color/color_title_select"
             android:textSize="17sp"
             android:visibility="visible" />
@@ -67,7 +69,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="15dp"
         android:gravity="center_vertical"
-      android:padding="3dp"
+      android:padding="4dp"
         android:textColor="@color/color_title_select"
         android:textSize="17sp"
         android:visibility="visible" />
@@ -84,6 +86,7 @@
 
 
             <TextView
+                tools:text="标题"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/ftv_midicon"
@@ -91,15 +94,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/drawable_title"
-                android:padding="3dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
                 android:textColor="@color/white"
-                android:textSize="21sp"
+                android:textSize="19sp"
                 android:visibility="visible" />
 
 
 
             <ImageView
-
+                tools:visibility="gone"
+                tools:background="@drawable/arrow_down"
                 app:layout_constraintLeft_toRightOf="@+id/ftv_title"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +113,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:gravity="center_vertical"
-                android:padding="3dp"
+               android:paddingBottom="3dp"
+                android:paddingTop="3dp"
                 android:textColor="@color/color_title_select"
                 android:visibility="gone" />
         </android.support.constraint.ConstraintLayout>
